After updated, offset broken in video editing #88263

Closed
opened 2021-05-13 19:01:46 +02:00 by Ahryeom HAN · 23 comments

System Information
Operating system: Fedora 33
Graphics card: Nvidia

Blender Version
Broken: (example: 2.80, edbf15d3c0, master, 2018-11-28, as found on the splash screen) 2.92.0
Worked: (newest version of Blender that worked as expected) 2.83.14

Short description of error
After updated, on Video editing, on strip input panel, Image offset check box has disappeared. ( https://docs.blender.org/manual/en/2.79/editors/vse/sequencer/properties/input.html )

My old files are now broken. I was heavily relying on this option with images bigger than display. How can I fix them?

Exact steps for others to reproduce the error

temp.zip
1/ Open the attached blender file in 2.83.14. It looks fine.
Screenshot from 2021-05-13 18-58-59.png
2/ Open the same file in 2.92.0. Offset is broken.
Screenshot from 2021-05-13 18-07-49.png

**System Information** Operating system: Fedora 33 Graphics card: Nvidia **Blender Version** Broken: (example: 2.80, edbf15d3c044, master, 2018-11-28, as found on the splash screen) 2.92.0 Worked: (newest version of Blender that worked as expected) 2.83.14 **Short description of error** After updated, on Video editing, on strip input panel, Image offset check box has disappeared. ( https://docs.blender.org/manual/en/2.79/editors/vse/sequencer/properties/input.html ) My old files are now broken. I was heavily relying on this option with images bigger than display. How can I fix them? **Exact steps for others to reproduce the error** [temp.zip](https://archive.blender.org/developer/F10096848/temp.zip) 1/ Open the attached blender file in 2.83.14. It looks fine. ![Screenshot from 2021-05-13 18-58-59.png](https://archive.blender.org/developer/F10095149/Screenshot_from_2021-05-13_18-58-59.png) 2/ Open the same file in 2.92.0. Offset is broken. ![Screenshot from 2021-05-13 18-07-49.png](https://archive.blender.org/developer/F10094884/Screenshot_from_2021-05-13_18-07-49.png)
Author

Added subscriber: @Aryeom

Added subscriber: @Aryeom

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

In 2.92 strip transform properties were changed. Your files should be converted to this new system though. In some cases (when information about strip source resolution is missing) this is not possible.

When I open file that you have provided in 2.83 and enable offset, I get same result as you see in 2.92. in frame 9, Y position is set to -402 which is different to what you show in first image. Can you check if you uploaded correct file?

I can see small difference between 2.83 and 2.92 so that I can correct, but not as significant as you show in images here.

In 2.92 strip transform properties were changed. Your files should be converted to this new system though. In some cases (when information about strip source resolution is missing) this is not possible. When I open file that you have provided in 2.83 and enable offset, I get same result as you see in 2.92. in frame 9, Y position is set to -402 which is different to what you show in first image. Can you check if you uploaded correct file? I can see small difference between 2.83 and 2.92 so that I can correct, but not as significant as you show in images here.

Added subscriber: @jehan

Added subscriber: @jehan
Author

Thank you for answering.

Sorry, maybe I made a mistake when I copy the file.
I re-copied file and rendered expected result as a video. (s1c22.avi).
temp.zip

And I checked on 2.91.2 and it works, too.
This is the screenshot on opening this file in 2.91.2
2.91.2.png
and in 2.92.0
2.92.0.png

Thank you.

Thank you for answering. Sorry, maybe I made a mistake when I copy the file. I re-copied file and rendered expected result as a video. (s1c22.avi). [temp.zip](https://archive.blender.org/developer/F10096848/temp.zip) And I checked on 2.91.2 and it works, too. This is the screenshot on opening this file in 2.91.2 ![2.91.2.png](https://archive.blender.org/developer/F10096859/2.91.2.png) and in 2.92.0 ![2.92.0.png](https://archive.blender.org/developer/F10096864/2.92.0.png) Thank you.

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

@Aryeom Thank you for new file.

Edit: 2.91 is working fine and 2.92 is not so this will be probably bug in transform properties change

@Aryeom Thank you for new file. Edit: 2.91 is working fine and 2.92 is not so this will be probably bug in transform properties change
Author

@iss Ok. Thank you. :)

@iss Ok. Thank you. :)

@Aryeom, I have looked into why there is difference and it is mainly to preserve existing animation, but I have noticed, that it was never converted anyway.

  • In 2.91 version, your strip has animated offset, but it is disabled.
  • in 2.92 offset can not be disabled anymore, therefore old animation is used and strip position is broken.

I can fix this in versioning, but that is by removing offset animation, when offset checkbox is disabled. Will this solution be OK for you?

@Aryeom, I have looked into why there is difference and it is mainly to preserve existing animation, but I have noticed, that it was never converted anyway. - In 2.91 version, your strip has animated offset, but it is disabled. - in 2.92 offset can not be disabled anymore, therefore old animation is used and strip position is broken. I can fix this in versioning, but that is by removing offset animation, when offset checkbox is disabled. Will this solution be OK for you?
Author

Actually I couldn't understand your proposed choices. If I can get the same result as before, this is what I want. This way we don't have to redo all the work, right?
I didn't really understand the offset option so I didn't like the concept. So thank you for the change.

Actually I couldn't understand your proposed choices. If I can get the same result as before, this is what I want. This way we don't have to redo all the work, right? I didn't really understand the offset option so I didn't like the concept. So thank you for the change.

I have proposed only one choice, that is removing animation if it wasn't used when converting files. Animation could have been just temporarily disabled in some cases, so I did not really want to just remove elements from files without consent. That I will have to discuss more broadly though.

Since picture is worth a 1000 words, can you download experimental build temp-vse-fix-#88263 from https://builder.blender.org/download/experimental/ and check if such fix will work for you?

I have proposed only one choice, that is removing animation if it wasn't used when converting files. Animation could have been just temporarily disabled in some cases, so I did not really want to just remove elements from files without consent. That I will have to discuss more broadly though. Since picture is worth a 1000 words, can you download experimental build `temp-vse-fix-#88263` from https://builder.blender.org/download/experimental/ and check if such fix will work for you?
Author

Thank you for your working. But it doesn't work ;-/
I checked with another files what I made but they are not working, neither.
I attached screen shots.

Screenshot from 2021-05-28 12-24-33.png

the other files
Screenshot from 2021-05-28 12-20-41.png

Screenshot from 2021-05-28 12-19-52.png

Thank you for your working. But it doesn't work ;-/ I checked with another files what I made but they are not working, neither. I attached screen shots. ![Screenshot from 2021-05-28 12-24-33.png](https://archive.blender.org/developer/F10146377/Screenshot_from_2021-05-28_12-24-33.png) the other files ![Screenshot from 2021-05-28 12-20-41.png](https://archive.blender.org/developer/F10146380/Screenshot_from_2021-05-28_12-20-41.png) ![Screenshot from 2021-05-28 12-19-52.png](https://archive.blender.org/developer/F10146379/Screenshot_from_2021-05-28_12-19-52.png)

Hi! If I may intervene: I work with @aryeom. Basically if she worked on an animation (sometimes for many hours) and she reopens the file in a newer Blender, she needs it to be the same animation. I.e. the result must be exactly the same if she hits "Render animation" with the old and new Blender.

We don't mind if some technical logics changed, simply the old animation must be converted to new internal logics so that the result is the same.

Hi! If I may intervene: I work with @aryeom. Basically if she worked on an animation (sometimes for many hours) and she reopens the file in a newer Blender, she needs it to be the same animation. I.e. the result must be exactly the same if she hits "Render animation" with the old and new Blender. We don't mind if some technical logics changed, simply the old animation must be converted to new internal logics so that the result is the same.

In #88263#1167660, @Aryeom wrote:
Thank you for your working. But it doesn't work ;-/

I hve forgot to mention, provided file was already saveds in version 2.92, so code thinks that files were created in that version and don't need correction. If file is still broken, re-save it with version 2.91 and then open in new version.

Can you check if saving files in version 2.91 and opening in provided build will work?

> In #88263#1167660, @Aryeom wrote: > Thank you for your working. But it doesn't work ;-/ I hve forgot to mention, provided file was already saveds in version 2.92, so code thinks that files were created in that version and don't need correction. If file is still broken, re-save it with version 2.91 and then open in new version. Can you check if saving files in version 2.91 and opening in provided build will work?
Author

Hmm. I never saved these files in version 2.92 because I saw the problem and I worried to mess up.
It could be the files saved more than version before.
But to be sure, I opened and saved the file in 2.91.2 and opened it again in the newer Blender.
And it still not working..

Hmm. I never saved these files in version 2.92 because I saw the problem and I worried to mess up. It could be the files saved more than version before. But to be sure, I opened and saved the file in 2.91.2 and opened it again in the newer Blender. And it still not working..

Oh no, I forgot that there was 2 files uploaded and I worked with incorrect one. Sorry for that, I will have to re-check again and make new fix.
Also I will update report so I don't get confused again.

Oh no, I forgot that there was 2 files uploaded and I worked with incorrect one. Sorry for that, I will have to re-check again and make new fix. Also I will update report so I don't get confused again.
Author

Ah, ok. then I'll wait. :D
Thank you.

Ah, ok. then I'll wait. :D Thank you.

Ok I think I have found the real bug, conversion was wrong for Y axis only and all tests I have done were for X axis. I am quite surprised, that I hear about this problem only now.

Please download again build temp-vse-fix-#88263 from https://builder.blender.org/download/experimental/ and check if this fix will work.

Ok I think I have found the real bug, conversion was wrong for Y axis only and all tests I have done were for X axis. I am quite surprised, that I hear about this problem only now. Please download again build temp-vse-fix-#88263 from https://builder.blender.org/download/experimental/ and check if this fix will work.
Author

It works well! ;D
Thanks for your work!

It works well! ;D Thanks for your work!

Thanks, will commit this fix then

Thanks, will commit this fix then

This issue was referenced by 4891da8ae2

This issue was referenced by 4891da8ae22523c3ecb727f6f8be5647cbe0f51d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-06-16 00:46:04 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88263
No description provided.